--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,10 @@
         "symfony/framework-bundle": "4.4.*",
         "symfony/maker-bundle": "^1.20",
         "symfony/requirements-checker": "^1.1",
-        "symfony/yaml": "4.4.*"
+        "symfony/twig-bundle": "4.4.*",
+        "symfony/yaml": "4.4.*",
+        "twig/extra-bundle": "^2.12|^3.0",
+        "twig/twig": "^2.12|^3.0"
     },
     "require-dev": {
     },
