--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "symfony/debug-bundle": "4.4.*",
         "symfony/dotenv": "4.4.*",
         "symfony/flex": "^1.3.1",
+        "symfony/form": "4.4.*",
         "symfony/framework-bundle": "4.4.*",
         "symfony/maker-bundle": "^1.21",
         "symfony/monolog-bundle": "^3.0",
