--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
         "symfony/security-csrf": "4.4.*",
         "symfony/stopwatch": "4.4.*",
         "symfony/twig-bundle": "4.4.*",
+        "symfony/validator": "4.4.*",
         "symfony/var-dumper": "4.4.*",
         "symfony/web-profiler-bundle": "4.4.*",
         "symfony/yaml": "4.4.*",
