--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "symfony/flex": "^1.3.1",
         "symfony/form": "4.4.*",
         "symfony/framework-bundle": "4.4.*",
+        "symfony/http-client": "4.4.*",
         "symfony/maker-bundle": "^1.21",
         "symfony/monolog-bundle": "^3.0",
         "symfony/requirements-checker": "^1.1",
