2020-09-02 1824 : MOD8 DEMO1 - User : formulaire d'inscription

--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "symfony/maker-bundle": "^1.21",
         "symfony/monolog-bundle": "^3.0",
         "symfony/requirements-checker": "^1.1",
+        "symfony/security-bundle": "4.4.*",
         "symfony/security-csrf": "4.4.*",
         "symfony/stopwatch": "4.4.*",
         "symfony/twig-bundle": "4.4.*",
