2020-09-03 0953 : MOD8 DEMO2 - Connexion/Déconnection User

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -16,6 +16,9 @@ security:
             form_login:
                 login_path: login
                 check_path: login
+            logout:
+                path: logout
+                target: home
 
     encoders:
         App\Entity\User:
