2020-09-03 1135 : MOD8 DEMO3 - Roles User (autorisations)

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -25,5 +25,5 @@ security:
             algorithm: bcrypt
 
     access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
+         - { path: ^/admin, roles: ROLE_ADMIN }
+         - { path: ^/profile, roles: ROLE_USER }
